bootstrap/apps/tns-app/deployment-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: tns-cloud
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        name: app
    spec:
      containers:
        - args:
            - -log.level=debug
            - http://db
          image: grafana/tns-app:latest
          imagePullPolicy: IfNotPresent
          name: app
          ports:
            - containerPort: 80
              name: http-metrics
              protocol: TCP
