bootstrap/apps/tns-app/deployment-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: tns-cloud
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: db
  template:
    metadata:
      labels:
        name: db
    spec:
      containers:
        - args:
            - -log.level=debug
          image: grafana/tns-db:latest
          imagePullPolicy: IfNotPresent
          name: db
          ports:
            - containerPort: 80
              name: http-metrics
              protocol: TCP
