bootstrap/apps/tns-app/deployment-loadgen.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgen
  namespace: tns-cloud
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: loadgen
  template:
    metadata:
      labels:
        name: loadgen
    spec:
      containers:
        - args:
            - -log.level=debug
            - http://app
          image: grafana/tns-loadgen:latest
          imagePullPolicy: IfNotPresent
          name: loadgen
          ports:
            - containerPort: 80
              name: http-metrics
              protocol: TCP
